welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:15: error: type mismatch;
 found   : Unit
 required: Int
  return compteur(1,tab)
                 ^golomb:30: warning: enclosing method compteur has result type Unit: return value discarded
  return resultat
  ^